[tool.poetry]
name = "distance-graph-model"
version = "0.1.0"
description = ""
authors = ["tbrittain <treybrittain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
kdtree = "^0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
