[tool.poetry]
name = "distance-tree-model"
version = "0.1.0"
description = "Small Flask API wrapped around a k-d tree to quickly find nearest neighbors "
authors = ["tbrittain <treybrittain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
kdtree = "^0.16"
requests = "^2.27.1"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
